# StealthDrone-Purdue-

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  dronecode_sdkConfig.cmake  dronecode_sdkTargets.cmake  lidar.h  offboard_velocity.cpp
core/: Makefile  cmake_install.cmake
example/StealthDrone-Purdue-/: CMakeLists.txt  lidar.cpp  lidar.h  obstacleMap.cpp  obstacleMap.h  offboard_velocity.cpp  stoppableThread.h
example/offboard_velocity/: CMakeLists.txt  offboard_velocity.cpp
integration_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugins/: Makefile  cmake_install.cmake
plugins/action/: Makefile  cmake_install.cmake
plugins/calibration/: Makefile  cmake_install.cmake
plugins/camera/: Makefile  camera_definition_files.rsc  cmake_install.cmake
plugins/follow_me/: Makefile  cmake_install.cmake
plugins/gimbal/: Makefile  cmake_install.cmake
plugins/info/: Makefile  cmake_install.cmake
plugins/log_files/: Makefile  cmake_install.cmake
plugins/mission/: Makefile  cmake_install.cmake
plugins/offboard/: Makefile  cmake_install.cmake
plugins/telemetry/: Makefile  cmake_install.cmake
samples/: Makefile  cmake_install.cmake
